# projeto_pipeline_etl

./: README.md  anotações.txt  main.py  profiling_report.html  pyproject.toml
src/: aplicacao.py  validador.py
