[tool.poetry]
name = "projeto-pipeline-etl"
version = "0.1.0"
description = ""
authors = ["Matheusinhofs <matheusfs117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
ydata-profiling = "^4.18.0"
pandas = "^2.3.3"
setuptools = "^80.9.0"
streamlit = "^1.52.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
